Before war commit with flex problems

--- a/index.html
+++ b/index.html
@@ -50,10 +50,11 @@
     <section>
       <div class="container-upper">
         <div class="profile-card">
-          <div class="card col-sm-12 col-md-11 col-lg-7">
-            <div class="card-body">
-              <h5 class="card-title">Портфолио</h5>
-              <p class="card-text">Это место, где собраны ваши научные публикации. Здесь вы можете добавлять свои
+          <div class="profile-card col-sm-12 col-md-11 col-lg-7">
+            <div class="profile-card-body">
+              <p class="profile-card-title">Портфолио</p>
+              <p class="profile-card-text">Это место, где собраны ваши научные публикации. Здесь вы можете добавлять
+                свои
                 научные работы, получать информацию об их уникальности и смотреть отзывы ваших научных руководителей.
               </p>
               <a href="#" class="btn btn-primary">Добавить работу</a>
@@ -65,7 +66,31 @@
     <section>
       <div class="container-medium">
         <div class="cards-about">
-
+          <div class="about-card col-sm-12 col-md-7 col-lg-5">
+            <div class="about-card-header">
+              Ваш профиль
+            </div>
+            <div class="about-card-body">
+              <p class="about-card-title">Сергей Павлович Фролов</p>
+              <p class="about-card-text"><strong>Научная степень:</strong> Магистр.<br>
+                <strong>Специализация:</strong> Инвестиционные проблемы экономически
+                развивающихся рынков.
+              </p>
+              <a href="#" class="btn btn-primary">Редактировать</a>
+            </div>
+          </div>
+          <div class="statistics-card col-sm-12 col-md-5 col-lg-4">
+            <div class="statistics-card-header">
+              Статистика
+            </div>
+            <div class="statistics-card-body">
+              <p class="statistics-card-text"><strong>На платформе:</strong> 2 года.<br>
+                <strong>Добавлено работ:</strong> 10.<br>
+                <strong>Средняя уникальность:</strong> 75%.<br>
+                <strong>Языки работ:</strong> русский, английский.
+              </p>
+            </div>
+          </div>
         </div>
         <div class="works-table">
 
