--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <section>
       <div class="container-upper">
         <div class="profile-card">
-          <div class="profile-card col-sm-12 col-md-11 col-lg-7">
+          <div class="profile-card col-sm-12 col-md-7 col-lg-5">
             <div class="profile-card-body">
               <p class="profile-card-title">Портфолио</p>
               <p class="profile-card-text">Это место, где собраны ваши научные публикации. Здесь вы можете добавлять
@@ -66,7 +66,7 @@
     <section>
       <div class="container-medium">
         <div class="cards-about">
-          <div class="about-card col-sm-12 col-md-7 col-lg-5">
+          <div class="about-card col-sm-12 col-md-5 col-lg-4">
             <div class="about-card-header">
               Ваш профиль
             </div>
@@ -92,15 +92,95 @@
             </div>
           </div>
         </div>
-        <div class="works-table">
-
+        <div class="works-table table-responsive-md">
+          <table class="table table-hover table-bordered">
+            <thead>
+              <tr>
+                <th scope="col">Название работы</th>
+                <th scope="col">Дата загрузки</th>
+                <th scope="col">Научный руководитель</th>
+                <th scope="col">Уникальность</th>
+              </tr>
+            </thead>
+            <colgroup>
+              <!-- задаем определённый стиль для двух колонн (атрибут span="2"), а после для каждой последующей свой -->
+              <col class="text-primary" style="color:rgb(235, 12, 12);">
+              <col style="color:#000">
+              <col style="color:silver">
+              <col style="color:coral">
+            </colgroup>
+            <tbody>
+              <tr>
+                <td class="text-primary" scope="row">Привлечение инвестиций как фактор развития экономики</td>
+                <td>21.05.2019</td>
+                <td class="text-primary">Асаншоева А.М.</td>
+                <td class="text-primary">89%</td>
+              </tr>
+              <tr>
+                <td class="text-primary" scope="row">The role of accounting in sustainable development</td>
+                <td>21.05.2019</td>
+                <td class="text-primary">Асаншоева А.М.</td>
+                <td class="text-primary">89%</td>
+              </tr>
+              <tr>
+                <td class="text-primary" scope="row">Сценарный анализ как инструмент учета рисков инвестиционного
+                  проекта</td>
+                <td>05.09.2018</td>
+                <td class="text-primary">Васильев М.Г.</td>
+                <td class="text-primary">67%</td>
+              </tr>
+              <tr>
+                <td class="text-primary" scope="row">Глобальные и региональные инвестиционные тенденции</td>
+                <td>21.05.2019</td>
+                <td class="text-primary">Асаншоева А.М.</td>
+                <td class="text-primary">89%</td>
+              </tr>
+              <tr>
+                <td class="text-primary" scope="row">Systemic risks in financial markets</td>
+                <td>18.05.2018</td>
+                <td class="text-primary">Леонидов В.Б.</td>
+                <td class="text-primary">77%</td>
+              </tr>
+              <tr>
+                <td class="text-primary" scope="row">The influence of tax regulation liberalisation on the domestic debt
+                  market</td>
+                <td>09.03.2018</td>
+                <td class="text-primary">Шаляпина В.С.</td>
+                <td class="text-primary">82%</td>
+              </tr>
+              <tr>
+                <td class="text-primary" scope="row">Биткоин как новый вид инвестиций</td>
+                <td>29.01.2018</td>
+                <td class="text-primary">Асаншоева А.М.</td>
+                <td class="text-primary">71%</td>
+              </tr>
+              <tr>
+                <td class="text-primary" scope="row">Проблема воспроизводства жилищного фонда в России</td>
+                <td>08.11.2017</td>
+                <td class="text-primary">Васильев М.Г.</td>
+                <td class="text-primary">65%</td>
+              </tr>
+              <tr>
+                <td class="text-primary" scope="row">Влияние безработицы на экономику СНГ</td>
+                <td>17.09.2017</td>
+                <td class="text-primary">Васильев М.Г.</td>
+                <td class="text-primary">68%</td>
+              </tr>
+              <tr>
+                <td class="text-primary" scope="row">Мировой валютный рынок Форекс</td>
+                <td>02.07.2017</td>
+                <td class="text-primary">Васильев М.Г.</td>
+                <td class="text-primary">67%</td>
+              </tr>
+            </tbody>
+          </table>
         </div>
       </div>
     </section>
     <footer>
       <div class="container-lower">
         <div class="copyright">
-
+          © Научный личный кабинет. Все права защищены
         </div>
       </div>
     </footer>
